# evidence_store

./: .bazelignore  .gitignore  BUILD.bazel  DESIGN.md  Dockerfile  MODULE.bazel  README.md  docker-compose.yml  go.mod  go.sum  prek.toml  renovate.json  retention.example.yaml
.bcr/: config.yml
.bcr/adapters/bazel/: metadata.template.json  source.template.json
.github/workflows/: ci.yml  release-bazel-adapter.yml
adapters/bazel/: .bazelrc  BUILD.bazel  MODULE.bazel  go.mod
adapters/bazel/cmd/evidence-bazel/: BUILD.bazel  main.go  record.go  record_test.go
adapters/bazel/internal/client/: BUILD.bazel  client.go  client_test.go
adapters/bazel/internal/gitinfo/: BUILD.bazel  gitinfo.go  gitinfo_test.go
adapters/bazel/internal/junitxml/: BUILD.bazel  parse.go  parse_test.go
adapters/bazel/internal/junitxml/testdata/: all_skipped.xml  mixed_results.xml  nested_suites.xml  single_pass.xml  with_error.xml
adapters/bazel/internal/testlogs/: BUILD.bazel  scan.go  scan_test.go
adapters/bazel/internal/watch/: BUILD.bazel  config.go  config_test.go  daemon.go  daemon_test.go  flock_unix.go  snapshot.go  snapshot_test.go  watcher.go
cmd/server/: BUILD.bazel  main.go
docs/: retention-rules-plan.md
internal/api/: BUILD.bazel  evidence.go  inheritance.go  response.go
internal/auth/: BUILD.bazel  middleware.go  middleware_test.go
internal/config/: BUILD.bazel  config.go  config_test.go
internal/migrate/: BUILD.bazel  migrate.go
internal/model/: BUILD.bazel  evidence.go  evidence_test.go  flextime_test.go  inheritance.go
internal/retention/: BUILD.bazel  config.go  config_test.go  evaluator.go  evaluator_test.go  worker.go  worker_test.go
internal/server/: BUILD.bazel  server.go
internal/store/: BUILD.bazel  evidence.go  inheritance.go  pagination.go  pagination_test.go
internal/validate/: BUILD.bazel  evidence.go  inheritance.go  validate_test.go
migrations/: 000001_initial_schema.down.sql  000001_initial_schema.up.sql  000002_drop_retention_policy_table.down.sql  000002_drop_retention_policy_table.up.sql
scripts/: dogfood.sh  smoke-test.sh
tests/: BUILD.bazel  auth_integration_test.go  distinct_test.go  integration_test.go  regex_search_test.go  retention_integration_test.go  utc_normalization_test.go
web/: BUILD.bazel  embed.go
web/static/: app.js  index.html  style.css
