load("@rules_go//go:def.bzl", "go_test")

go_test(
    name = "tests_test",
    srcs = [
        "auth_integration_test.go",
        "integration_test.go",
        "regex_search_test.go",
        "retention_integration_test.go",
        "utc_normalization_test.go",
    ],
    data = ["//migrations"],
    tags = [
        "exclusive",
        "requires-docker",
    ],
    deps = [
        "//internal/config",
        "//internal/migrate",
        "//internal/model",
        "//internal/retention",
        "//internal/server",
        "//internal/store",
        "@com_github_google_uuid//:uuid",
        "@com_github_jackc_pgx_v5//pgxpool",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
        "@com_github_testcontainers_testcontainers_go//:testcontainers-go",
        "@com_github_testcontainers_testcontainers_go//wait",
    ],
)
