load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "web",
    srcs = ["embed.go"],
    embedsrcs = [
        "static/app.js",
        "static/index.html",
        "static/style.css",
    ],
    importpath = "github.com/nesono/evidence-store/web",
    visibility = ["//visibility:public"],
)
