load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "server_lib",
    srcs = ["main.go"],
    importpath = "github.com/nesono/evidence-store/cmd/server",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/config",
        "//internal/migrate",
        "//internal/server",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)

go_binary(
    name = "server",
    embed = [":server_lib"],
    visibility = ["//visibility:public"],
)
