load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "migrate",
    srcs = ["migrate.go"],
    importpath = "github.com/nesono/evidence-store/internal/migrate",
    visibility = ["//:__subpackages__"],
    deps = [
        "@com_github_golang_migrate_migrate_v4//:migrate",
        "@com_github_golang_migrate_migrate_v4//database/postgres",
        "@com_github_golang_migrate_migrate_v4//source/file",
    ],
)
