load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "model",
    srcs = [
        "evidence.go",
        "inheritance.go",
    ],
    importpath = "github.com/nesono/evidence-store/internal/model",
    visibility = ["//:__subpackages__"],
    deps = ["@com_github_google_uuid//:uuid"],
)

go_test(
    name = "model_test",
    srcs = [
        "evidence_test.go",
        "flextime_test.go",
    ],
    embed = [":model"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
