load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "server",
    srcs = ["server.go"],
    importpath = "github.com/nesono/evidence-store/internal/server",
    visibility = ["//:__subpackages__"],
    deps = [
        "//internal/api",
        "//internal/auth",
        "//internal/config",
        "//internal/store",
        "//web",
        "@com_github_go_chi_chi_v5//:chi",
        "@com_github_go_chi_chi_v5//middleware",
        "@com_github_jackc_pgx_v5//pgxpool",
    ],
)
