load("@rules_go//go:def.bzl", "go_binary", "go_library", "go_test")

go_library(
    name = "evidence-bazel_lib",
    srcs = [
        "main.go",
        "record.go",
    ],
    importpath = "github.com/nesono/evidence-store/adapters/bazel/cmd/evidence-bazel",
    visibility = ["//visibility:private"],
    deps = [
        "//internal/client",
        "//internal/gitinfo",
        "//internal/junitxml",
        "//internal/testlogs",
        "//internal/watch",
    ],
)

go_binary(
    name = "evidence-bazel",
    embed = [":evidence-bazel_lib"],
    visibility = ["//visibility:public"],
)

go_test(
    name = "evidence-bazel_test",
    srcs = ["record_test.go"],
    embed = [":evidence-bazel_lib"],
    deps = [
        "//internal/client",
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
