load("@rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "junitxml",
    srcs = ["parse.go"],
    importpath = "github.com/nesono/evidence-store/adapters/bazel/internal/junitxml",
    visibility = ["//:__subpackages__"],
)

go_test(
    name = "junitxml_test",
    srcs = ["parse_test.go"],
    data = glob(["testdata/**"]),
    embed = [":junitxml"],
    deps = [
        "@com_github_stretchr_testify//assert",
        "@com_github_stretchr_testify//require",
    ],
)
